--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
           <DIV class="container" >
             <ul class="navbar-nav ml-auto mr-5 pr-5" style="font-size:20px;">
               <li class="nav-item active">
-                <a class="nav-link" href="/index.html">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="./index.html">HOME <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/signup.html" target="_blank">SIGN UP</a>
+                <a class="nav-link" href="./signup.html" target="_blank">SIGN UP</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login.html" target="_blank">LOGIN</a>
+                <a class="nav-link" href="./login.html" target="_blank">LOGIN</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#dis">DISTRICTS</a>
