--- a/kannur.html
+++ b/kannur.html
@@ -18,7 +18,7 @@
           <DIV class="container" >
             <ul class="navbar-nav ml-auto mr-5 pr-5" style="font-size:20px;">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="./index.html">HOME <span class="sr-only">(current)</span></a>
               </li>
 
               <li class="nav-item dropdown">
@@ -27,10 +27,10 @@
                 </a>
                 <div class="dropdown-menu" style="background-color:#45abe2" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item active" href="#">KANNUR</a>
-                  <a class="dropdown-item" href="/kozhikod.html">KOZHIKODE</a>
-                  <a class="dropdown-item" href="/wayanad.html">WAYANAD</a>
-                  <a class="dropdown-item" href="/kollam.html">KOLLAM</a>
-                  <a class="dropdown-item" href="/idukki.html">IDUKKI</a>
+                  <a class="dropdown-item" href="./kozhikod.html">KOZHIKODE</a>
+                  <a class="dropdown-item" href="./wayanad.html">WAYANAD</a>
+                  <a class="dropdown-item" href="./kollam.html">KOLLAM</a>
+                  <a class="dropdown-item" href="./idukki.html">IDUKKI</a>
                   <a class="dropdown-item disabled" href="#">ERNAKULAM</a>
                   <a class="dropdown-item disabled" href="#">KOTTAYAM</a>
                   <a class="dropdown-item disabled" href="#">THIRUVANANTHAPURAM</a>
