--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
                     <img src="./images/namasthe.png" alt="namasthe image" width="150" heigth="300">
                     <p class="">LOGIN</p>
                 </header>
-                <form class="main-form text-center" action="/index.html">
+                <form class="main-form text-center" action="./index.html">
                     <div class="form-group">
                         <label class="my-0">
                             <input type="text" class="myInput" placeholder="Username"> 
@@ -39,7 +39,7 @@
                     </div>
                     <span class="check_2">Forgot Password?</span><br>
 
-                    <button CLASS="gohome mt-3" formaction="/index.html">BACK TO HOME</button>
+                    <button CLASS="gohome mt-3" formaction="./index.html">BACK TO HOME</button>
                 </form>
             </div>
         </div>
