--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
            </div>
             <div class="col-md-6">
                 <div class="myLeftCtn"> 
-                    <form class="myForm text-center" action="/index.html">
+                    <form class="myForm text-center" action="./index.html">
                         <header>Create new account</header>
                         <div class="form-group">
                            
@@ -43,11 +43,11 @@
                             </label>
                         </div>
 
-                       <a href="index.html"><input type="submit" class="butt" value="CREATE ACCOUNT"></a> 
+                       <a href="./index.html"><input type="submit" class="butt" value="CREATE ACCOUNT"></a> 
 
                         <p class="loginfo">Already have an account?</p>
 
-                        <button class="butt" formaction="/login.html">LOGIN</button>
+                        <button class="butt" formaction="./login.html">LOGIN</button>
                         
 
                     </form>
