--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="video">
           <video id="bgvid" autoplay loop muted playsinline>
-            <source src="./videos/Kerala - God's own country 4K.mp4" type="video/mp4">
+            <source src="https://drive.google.com/uc?export=download&id=1XQ_8FGE_K1eQDWK64TG1AjEttG8s9KHn"type="video/mp4">
           </video>
         </div>
         <div class="overlay"><h2>EXPLORE KERALA</h2></div>
@@ -243,7 +243,7 @@
       <iframe class=" embed-responsive-item" src="https://www.tourmyindia.com/states/kerala/"></iframe>
     </div>
     <div class=" frame embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="http://www.keralatourism.gov.in/"></iframe>
+      <iframe class="embed-responsive-item" src="https://www.ekeralatourism.net/blog/places-to-visit-in-kerala/"></iframe>
     </div>
 </div>
 </div>
