--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
         <div class="video">
           <video id="bgvid" autoplay loop muted playsinline>
-            <source src="https://drive.google.com/uc?export=download&id=1XQ_8FGE_K1eQDWK64TG1AjEttG8s9KHn"type="video/mp4">
+            <source src="https://drive.google.com/file/d/1XQ_8FGE_K1eQDWK64TG1AjEttG8s9KHn/preview"type="video/mp4">
           </video>
         </div>
-        <div class="overlay"><h2>EXPLORE KERALA</h2></div>
+        <div class="overlay container-fluid"><h2>EXPLORE KERALA</h2></div>
 
     <div id="dis" class="jumbotron jumbotron-fluid">
       <div class="container">
