--- a/kannur.html
+++ b/kannur.html
@@ -49,12 +49,12 @@
 
 
     <div id="up" class="container mt-5">
-        <header STYLE="text-align:center" class="my-5">
+        <header STYLE="text-align:center" class="container my-5">
             <h2>
                 TOP ATTRACTIONS IN KANNUR
             </h2>
         </HEADER>
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kannur/fort.webp" class="card-img-top" alt="fort logo">
         <div class="card-body">
           <h2 class="card-title">St. Angelo Fort</h2>
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kannur/beach.webp" class="card-img-top" alt="beach img">
         <div class="card-body" >
           <h2 class="card-title">Muzhappilangad Beach</h2>
@@ -84,7 +84,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kannur/madai.webp" class="card-img-top" alt="madai image">
         <div class="card-body">
           <h2 class="card-title">Madayipara</h2>
@@ -98,7 +98,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kannur/pai.webp" class="card-img-top" alt="palakka img">
         <div class="card-body">
           <h2 class="card-title">Paithalmala</h2>
