--- a/kollam.html
+++ b/kollam.html
@@ -49,12 +49,12 @@
 
 
     <div id="up" class="container mt-5">
-        <header STYLE="text-align:center" class="my-5">
+        <header STYLE="text-align:center" class="container my-5">
             <h2>
                 TOP ATTRACTIONS IN KOLLAM
             </h2>
         </HEADER>
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kollam/ASTAMUDI.jpg" class="card-img-top" alt="kayal img">
         <div class="card-body">
           <h2 class="card-title">Ashtamudi Lake</h2>
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kollam/BEEC.jpg" class="card-img-top" alt="beach img">
         <div class="card-body" >
           <h2 class="card-title">Kollam Beach</h2>
@@ -88,7 +88,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kollam/THIRU.jpg" class="card-img-top" alt="thiurimage">
         <div class="card-body">
           <h2 class="card-title">Thirumullavaram Beach</h2>
@@ -103,7 +103,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kollam/PARK.jpg" class="card-img-top" alt="park img">
         <div class="card-body">
           <h2 class="card-title">Kollam Adventure Park</h2>
@@ -122,7 +122,7 @@
       </div>
     </div>
 
-    <div class="top" style="margin-left:80%"><a href="#up">up</a></div>
+    <div class="top" style="margin-left:90%"><a href="#up">up</a></div>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
