--- a/wayanad.html
+++ b/wayanad.html
@@ -49,12 +49,12 @@
 
 
     <div id="up" class="container mt-5">
-        <header STYLE="text-align:center" class="my-5">
+        <header STYLE="text-align:center" class="container my-5">
             <h2>
                 TOP ATTRACTIONS IN WAYANAD
             </h2>
         </HEADER>
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/wayanad/edkl.webp" class="card-img-top" alt="edklimg">
         <div class="card-body">
           <h2 class="card-title">Edakkal Caves</h2>
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/wayanad/bana.webp" class="card-img-top" alt="bana img">
         <div class="card-body" >
           <h2 class="card-title">Banasura Sagar Dam</h2>
@@ -85,7 +85,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/wayanad/chembra.jpg" class="card-img-top" alt="chembra image">
         <div class="card-body">
           <h2 class="card-title">Chembra Peak</h2>
@@ -100,7 +100,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/wayanad/neeli.webp" class="card-img-top" alt="neeli img">
         <div class="card-body">
           <h2 class="card-title">Neelimala View Point</h2>
@@ -116,7 +116,7 @@
       </div>
     </div>
 
-    <div class="top" style="margin-left:80%"><a href="#up">up</a></div>
+    <div class="top" style="margin-left:90%"><a href="#up">up</a></div>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
