--- a/idukki.html
+++ b/idukki.html
@@ -49,26 +49,26 @@
 
 
     <div id="up" class="container mt-5">
-        <header STYLE="text-align:center" class="my-5">
+        <header STYLE="text-align:center" class=" container my-5">
             <h2>
                 TOP ATTRACTIONS IN IDUKKI
             </h2>
         </HEADER>
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/idukki/DAM.jpg" class="card-img-top" alt="dam img">
         <div class="card-body">
           <h2 class="card-title">Idukki Arch Dam</h2>
           <p class="card-text">
-            <P>The Idukki dam is constructed across the Periyar River, in a valley between the Kuravan and Kurathi hills in Kerala. The awe-inspiring, majestic dam, which stands at 167.68 meters (560 ft), is one of the highest arch dams in Asia. The dam, which is one of the Idukki tourist places, constructed by the Kerala government in 1975 and supports 780 MW hydroelectric power station that draws electricity from this dam.</P>
+            <P>The Idukki dam is constructed across the Periyar River, in a valley between the Kuravan and Kurathi hills in Kerala. The awe-inspiring, majestic dam, which stands at 167.68 meters (550 ft), is one of the highest arch dams in Asia. The dam, which is one of the Idukki tourist places, constructed by the Kerala government in 1975 and supports 780 MW hydroelectric power station that draws electricity from this dam.</P>
             <P>The sheer magnitude of the structure along with the mountains, verdant vegetation, and 60 sq. km placid lake, which is created by the 3 dams, Idukki dam, Cheruthoni and Kulamavu, captivate the visitors.</P>
             <P><b>Distance:</b> 33 km from Idukki Dist.</P>
             <P><b>Timings:</b> Public Holidays, Saturdays and Sundays.</P>
-            <P><B>Entry Fees:</B> Rs 25 for adults and Rs 5 for children. The tariff for a 15-minute boat ride for 5 persons is Rs. 600.</P>
+            <P><B>Entry Fees:</B> Rs 25 for adults and Rs 5 for children. The tariff for a 15-minute boat ride for 5 persons is Rs. 500.</P>
 
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/idukki/SANC.jpg" class="card-img-top" alt="sanc img">
         <div class="card-body" >
           <h2 class="card-title">Idukki Wildlife Sanctuary</h2>
@@ -84,7 +84,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/idukki/POTH.jpg" class="card-img-top" alt="poth image">
         <div class="card-body">
           <h2 class="card-title">Pothamedu Plantations</h2>
@@ -99,7 +99,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/idukki/PAINAVU.jpg" class="card-img-top" alt="painauimg">
         <div class="card-body">
           <h2 class="card-title">Painavu</h2>
@@ -113,7 +113,7 @@
       </div>
     </div>
 
-    <div class="top" style="margin-left:80%"><a href="#up">up</a></div>
+    <div class="top" style="margin-left:90%"><a href="#up">up</a></div>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
