--- a/kozhikod.html
+++ b/kozhikod.html
@@ -49,12 +49,12 @@
 
 
     <div id="up" class="container mt-5">
-        <header STYLE="text-align:center" class="my-5">
+        <header STYLE="text-align:center" class="container my-5">
             <h2>
                 TOP ATTRACTIONS IN KOZHIKODE
             </h2>
         </HEADER>
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kozhikod/beach.jpg" class="card-img-top" alt="beach image">
         <div class="card-body">
           <h2 class="card-title">Kozhikode Beach</h2>
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kozhikod/mala.jpg" class="card-img-top" alt="mala img">
         <div class="card-body" >
           <h2 class="card-title">Vellarimala</h2>
@@ -83,7 +83,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kozhikod/thushh.jpg" class="card-img-top" alt="thussh image">
         <div class="card-body">
           <h2 class="card-title">Thusharagiri Fall</h2>
@@ -98,7 +98,7 @@
         </div>
       </div>
 
-      <div class="card mb-4 mx-auto" style="width:60% ;">
+      <div class="card mb-4 mx-auto" style="width:100% ;">
         <img src="./images/kozhikod/beypore.jpg" class="card-img-top" alt="bey img">
         <div class="card-body">
           <h2 class="card-title">Beypore Beach</h2>
@@ -114,7 +114,7 @@
       </div>
     </div>
 
-    <div class="top" style="margin-left:80%"><a href="#up">up</a></div>
+    <div class="top" style="margin-left:90%"><a href="#up">up</a></div>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
