--- a/signup.html
+++ b/signup.html
@@ -59,7 +59,7 @@
             
         </div>
     </div>
-    <a href="/index.html"><button CLASS="d-block mx-auto gohome">BACK TO HOME</button></a>
+    <a href="./index.html"><button CLASS="d-block mx-auto gohome">BACK TO HOME</button></a>
 </div>
     
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
